# rust-quant

./: .dockerignore  .gitignore  .htpasswd  Cargo.toml  README.md  build.rs  capture.config.js  docker-compose.yaml  gen_js.Dockerfile  grafana.ini  lambda_engine.Dockerfile  market_data.config.js  nginx.conf  tokyo-vps.config.js
benches/: body.json  dataset.rs  encode_json.rs
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/app/: envConfig.ts
frontend/src/features/lambda/: Lambda.tsx  lambda.api.ts  lambda.types.ts  valueParser.ts
frontend/src/proto/gen-js/: lambda_view_grpc_web_pb.js  lambda_view_pb.js
instance/: latency-mm.toml  swap-mm-ethusd.toml  swap-mm-sim.toml
nodejs/: index.js  package.json
proto/: lambda_view.proto
src/: lib.rs  pubsub.rs
src/cache/: market_depth_cache.rs  mod.rs  order_update_cache.rs  value_cache.rs
src/conn/: websocket.rs
src/core/: config.rs  mod.rs  orders.rs
src/ftx/: ftx_order_gateway.rs  market_depth.rs  mod.rs  rest.rs  rest_tests.rs  ticker.rs  types.rs  utils.rs
src/lambda/: engine.rs  lambda.rs  lambda_instance.rs  mod.rs  param_service.rs
src/lambda/strategy/swap_mm/: lambda.rs  mod.rs  params.rs
src/model/: constants.rs  instrument.rs  market_data_model.rs  measurement_cache.rs  mod.rs  order_data_model.rs
src/pubsub/: market_depth_cache.rs  mod.rs  simple_message_bus.rs
src/view/: mod.rs  utils.rs  view_service.rs
tests/: ftx_test.rs  measurement_cache_test.rs  order_update_cache_test.rs  simple_hedger_test.rs  simulation.rs  test_common.rs
