[package]
name = "rust-quant"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.51"
chrono = "0.4.19"
confy = "0.4.0"
criterion = "0.3.5"
dashmap = "4.0.2"
env_logger = "0.9.0"
futures-util = "0.3.16"
hex = "0.4.3"
hmac = "0.11.0"
log = "0.4.14"
nng = "1.0.0"
periodic = "0.1.1"
postgres = "0.19.1"
rand = "0.8.4"
redis = { version = "0.21.0", features = ["tokio-comp"] }
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
rmp-serde = "0.15.5"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sha2 = "0.9.5"
simd-json = "0.4.7"
simple-error = "0.2.3"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ['full'] }
tokio-stream = "0.1.7"
tokio-tungstenite = { version = "0.15.0", features = ['native-tls'] }
tungstenite = { version = "0.14.0", features = ["native-tls"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }

[[bench]]
name = "encode_json"
harness = false
