[package]
name = "rust-quant"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
chrono = "0.4.19"
confy = "0.4.0"
crc32fast = "1.2.1"
criterion = "0.3.5"
dashmap = { version = "4.0.2", features = ["serde"] }
env_logger = "0.9.0"
futures-util = "0.3.16"
hex = "0.4.3"
hmac = "0.11.0"
log = "0.4.14"
mockall = "0.10.2"
ordered-float = "2.8.0"
postgres = "0.19.1"
rand = "0.8.4"
redis = { version = "0.21.2", features = ["tokio-comp"] }
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.67"
serial_test = "0.5.1"
sha2 = "0.9.5"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.28"
tokio = { version = "1.12.0", features = ['full'] }
tokio-stream = "0.1.7"
tokio-tungstenite = { version = "0.15.0", features = ['rustls-tls'] }
tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
mockall = "0.10.2"

[build-dependencies]
tonic-build = { version = "0.5" }


[[bench]]
name = "encode_json"
harness = false
